# This Source Code Form is subject to the terms of the GNU General Public
# License, version 3. If a copy of the GPL was not distributed with this file,
# You can obtain one at https://www.gnu.org/licenses/gpl.txt.
[package]
name = "open_house"
version = "2.0.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "lib/yggdrasil"
]

[dependencies]
approx = "^ 0.3"
bytes = "^ 0.5"
chrono = "^ 0.4"
failure = "^ 0.1"
futures = "^ 0.3"
hyper = "^ 0.13"
json = "^ 0.12"
lazy_static = "*"
openssl = { version=">=0.10", features = ["v110"] }
regex = "^ 1"
reqwest = "0.9"
structopt = "^ 0.3"
tokio = { version = "^ 0.2", features = ["full"] }
tracing = "^ 0.1"
tracing-subscriber = "0.2.0-alpha.4"
yggdrasil = { path = "./lib/yggdrasil" }
