[package]
name = "oh_db"
build = "build.rs"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]

[dependencies]
argparse = "0.2"
env_logger = "0.3.5"
log = "0.3"
rand = "0.3"
capnp = "0.7.4"
ketos = { git = "https://github.com/murarth/ketos" }

[dependencies.ws]
version = "=0.4.8"
features = ["ssl"]

[dependencies.openssl]
version = "=0.7.14"
features = ["tlsv1_2", "ecdh_auto"]

[build-dependencies]
capnpc = "0.8"
