[package]
name = "oh_db"
build = "build.rs"
version = "0.1.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]

[dependencies]
yggdrasil = { path = "yggdrasil" }
argparse = "0.2"
env_logger = "0.3.5"
log = "0.3"
rand = "0.3"
capnp = "=0.8.10"
ketos = "=0.10"

[dependencies.ws]
version = "=0.7"

[build-dependencies]
capnpc = "=0.8.5"
