# This Source Code Form is subject to the terms of the GNU General Public
# License, version 3. If a copy of the GPL was not distributed with this file,
# You can obtain one at https://www.gnu.org/licenses/gpl.txt.
[package]
name = "yggdrasil"
version = "0.5.0"
authors = ["Terrence Cole <terrence.d.cole@gmail.com>"]
edition = "2018"

[dependencies]
approx = "^ 0.3"
downcast-rs = "1.0"
failure = "^ 0.1"
lazy_static = "*"
tracing = "^ 0.1"

[dev-dependencies]
tracing-subscriber = "0.2.0-alpha.4"
